--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --open",
-    "snap": "git add . && git commit"
+    "snap": "git add . && git commit",
+    "push": "git push origin main"
   },
   "keywords": [],
   "author": "",
